...
                            </searchBar>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="f40-z5-gBh">
                                <rect key="frame" x="0.0" y="123" width="414" height="690"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <inset key="scrollIndicatorInsets" minX="10" minY="10" maxX="10" maxY="10"/>
...
                            </label>
                            <textField contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gvj-Mf-BLv">
                                <rect key="frame" x="48" y="323" width="319" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="8EG-lw-YXu"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OVl-Jf-Czc">
                                <rect key="frame" x="20" y="225" width="177" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yEX-Ur-bo1">
                                <rect key="frame" x="135" y="246" width="144" height="30"/>
                                <state key="normal" title="Edit profile"/>
                                <connections>
                                    <segue destination="joR-Qr-hxe" kind="presentation" id="w5G-J4-LaD"/>
...
                                <rect key="frame" x="363" y="92" width="18" height="22"/>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="arrow.clockwise" catalog="system">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="dML-xb-6Jr"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="BwT-me-v1f"/>
                    <connections>
                        <outlet property="bio" destination="OVl-Jf-Czc" id="c6O-ia-tzW"/>
...
                                <rect key="frame" x="149" y="104" width="117" height="200"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ie-tF-seP">
                                <rect key="frame" x="60" y="391" width="79" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <color key="backgroundColor" red="0.98039215690000003" green="0.70985776869999995" blue="0.81990470449999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="21"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
